force-app/package/core/objects/Data_Cloud_Ingestion_API_Field_Mapping__mdt/Data_Cloud_Ingestion_API_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Data Cloud Ingestion API Field Mapping</label>
    <pluralLabel>Data Cloud Ingestion API Field Mappings</pluralLabel>
</CustomObject>