force-app/package/core/objects/Data_Cloud_Ingestion_API_Field_Mapping__mdt/fields/Data_Cloud_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Field_Type__c</fullName>
    <defaultValue>&apos;textField&apos;</defaultValue>
    <description>Indicator of the target field type</description>
    <label>Data Cloud Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>textField</fullName>
                <default>true</default>
                <label>textField</label>
            </value>
            <value>
                <fullName>numberField</fullName>
            </value>
            <value>
                <fullName>dateTimeField</fullName>
            </value>
            <value>
                <fullName>dateField</fullName>
            </value>
            <value>
                <fullName>uuidField</fullName>
            </value>

            <value>
                <fullName>emailField</fullName>
            </value>
            <value>
                <fullName>urlField</fullName>
            </value>
            <value>
                <fullName>phoneField</fullName>
            </value>
            <value>
                <fullName>percentField</fullName>
            </value>
            <value>
                <fullName>booleanField</fullName>
                <label>booleanField2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>