force-app/package/core/objects/Data_Cloud_Ingestion_API_Field_Mapping__mdt/fields/Is_Event_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Time_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Event Time Field</label>
    <type>Checkbox</type>
</CustomField>