force-app/package/core/objects/Data_Cloud_Ingestion_API_Field_Mapping__mdt/fields/Is_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Key</label>
    <type>Checkbox</type>
</CustomField>