force-app/package/core/objects/Data_Cloud_Ingestion_API_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>Data_Cloud_Ingestion_API_Configuration__c</columns>
    <columns>MasterLabel</columns>
    <columns>Source__c</columns>
    <columns>Target__c</columns>
    <columns>Data_Cloud_Field_Type__c</columns>
    <columns>Is_Primary_Key__c</columns>
    <columns>Is_Event_Time_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>